Changelog
=========

1.1 (unreleased)
----------------

- Added '@@cleanup-comments-list' page that lists the latest comments.
  [maurits]


1.0 (2010-12-21)
----------------

- Initial release